# opengl-render

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build.sh  conanfile.txt  main.cpp  shader.vs  shaderclass.cpp  shaderclass.h
helper/: build.sh
src/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  camera.h  main.cpp  shaderclass.h
